Fix heading overflow in disco pane (#7503)

--- a/src/disco/components/Addon/styles.scss
+++ b/src/disco/components/Addon/styles.scss
@@ -78,6 +78,7 @@ $addon-padding: 20px;
     font-weight: medium;
     line-height: 1.2;
     margin: 0;
+    word-break: break-all;
 
     a:link,
     a:visited,
